--- a/Website/client/public/index.html
+++ b/Website/client/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/assets/css/JuiceCord-kit.css" type="text/css">
   </head>
   <body>
+    <script defer src="./assets/js/main.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
